cmake_minimum_required(VERSION 3.1.0 FATAL_ERROR)

# List of packet to compile
add_subdirectory(packages/uint256_t)
add_subdirectory(packages/CellEngine)
add_subdirectory(packages/CellNutrient)
add_subdirectory(packages/CellPro)
add_subdirectory(packages/CellSignals)
add_subdirectory(packages/ccl)
add_subdirectory(packages/gro)
